Create catalog grid and advantages

--- a/index.html
+++ b/index.html
@@ -144,6 +144,166 @@
 		</div>
 	</header>
 
+	<section class="first_screen" id="first_screen">
+		<div class="first_screen--slider swiper">
+			<div class="swiper-wrapper">
+				<div style="background: url('./img/1.png')" class="swiper-slide">
+					<div class="first_screen--text">
+						<h3 class="first_screen--title">
+							Новинки семян овощей - томаты, свекла.
+						</h3>
+						<h4 class="first_screen--subtitle">
+							Чтобы ознакомиться со всем ассортиментом,
+							переходите в каталог
+						</h4>
+					</div>
+				</div>
+				<div style="background: url('./img/2.png')" class="swiper-slide">
+					<div class="first_screen--text">
+						<h3 class="first_screen--title">
+							Новинки семян овощей - томаты, свекла.
+						</h3>
+						<h4 class="first_screen--subtitle">
+							Чтобы ознакомиться со всем ассортиментом,
+							переходите в каталог
+						</h4>
+					</div>
+				</div>
+				<div style="background: url('./img/3.png')" class="swiper-slide">
+					<div class="first_screen--text">
+						<h3 class="first_screen--title">
+							Все для рассады
+						</h3>
+						<h4 class="first_screen--subtitle">
+							Чтобы ознакомиться со всем ассортиментом,
+							переходите в каталог.
+						</h4>
+					</div>
+				</div>
+				<div style="background: url('./img/4.png')" class="swiper-slide">
+					<div class="first_screen--text">
+						<h3 class="first_screen--title">
+							Все для рассады
+						</h3>
+						<h4 class="first_screen--subtitle">
+							Чтобы ознакомиться со всем ассортиментом,
+							переходите в каталог
+						</h4>
+					</div>
+				</div>
+			</div>
+			<div class="swiper-pagination">
+			</div>
+			<div class="swiper-button-prev"></div>
+			<div class="swiper-button-next"></div>
+		</div>
+	</section>
+
+	<section class="catalog" id="catalog">
+		<div class="container-fluid">
+			<div class="catalog_inner">
+				<div style="background: url('./img/catalog-1.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Средства защиты от комаров, клещей, мух
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+				<div style="background: url('./img/catalog-2.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Семена перца
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+				<div style="background: url('./img/catalog-3.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Стрижка газона
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+				<div style="background: url('./img/catalog-4.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Полив газона
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+				<div style="background: url('./img/catalog-5.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Полив газона
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+				<div style="background: url('./img/catalog-6.png');" class="catalog_card">
+					<a href="#">
+						<div class="catalog_card--title">
+							Семена перца
+						</div>
+
+						<div class="catalog_card--link">
+							Купить <img src="./img/buy.svg" alt="">
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="advantages" id="advantages">
+		<div class="container">
+			<h2>Преимущества</h2>
+			
+			<div class="advantages_inner">
+				<div class="advantages_item">
+					<img src="./img/advantage1.svg" alt="">
+					<h3 class="advantages_item--title">Доставка по всей Беларуси</h3>
+					<h4 class="advantages_item--subtitle">Сроки доставки и способы оплаты</h4>
+				</div>
+
+				<div class="advantages_item">
+					<img src="./img/advantage2.svg" alt="">
+					<h3 class="advantages_item--title">Более 50 лет опыта работы</h3>
+					<h4 class="advantages_item--subtitle">Лидер в РБ по качественным семянам</h4>
+				</div>
+
+				<div class="advantages_item">
+					<img src="./img/advantage3.svg" alt="">
+					<h3 class="advantages_item--title">Качество гарантируем!</h3>
+					<h4 class="advantages_item--subtitle">Поставляем только отборный материал</h4>
+				</div>
+
+				<div class="advantages_item">
+					<img src="./img/advantage4.svg" alt="">
+					<h3 class="advantages_item--title">Оформление заказа</h3>
+					<h4 class="advantages_item--subtitle">Без регистрации</h4>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
