Create new blocks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 	<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -300,6 +300,159 @@
 					<h3 class="advantages_item--title">Оформление заказа</h3>
 					<h4 class="advantages_item--subtitle">Без регистрации</h4>
 				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="opt" id="opt">
+		<div class="container">
+			<h2 class="opt_title">
+				Оптовым клиентам
+			</h2>
+			<h3 class="opt_subtitle">
+				От маленького дела до большого бизнеса несколько шагов
+			</h3>
+
+			<div class="opt_steps">
+				<div class="opt_step">
+				<span class="opt_step--number">
+					1
+				</span>
+					<span class="opt_step--text">
+					Оставьте заявку
+				</span>
+				</div>
+
+				<div class="opt_step">
+				<span class="opt_step--number">
+					2
+				</span>
+					<span class="opt_step--text">
+					Получите прайс
+				</span>
+				</div>
+
+				<div class="opt_step">
+				<span class="opt_step--number">
+					3
+				</span>
+					<span class="opt_step--text">
+					Определитесь с товаром
+				</span>
+				</div>
+
+				<div class="opt_step">
+				<span class="opt_step--number">
+					4
+				</span>
+					<span class="opt_step--text">
+					Получите свой заказ
+				</span>
+				</div>
+			</div>
+
+			<div class="more">
+				<a href="#" class="opt_btn">
+					Подробнее <img src="./img/buy.svg" alt="">
+				</a>
+			</div>
+		</div>
+	</section>
+
+	<section class="articles" id="article">
+		<div class="container-fluid">
+			<h2>
+				Статьи
+			</h2>
+
+			<div class="articles_inner">
+				<article class="article_card">
+					<img class="article_card--image" src="./img/article_img1.png" alt="">
+
+					<div class="article_card--info">
+						<h4 class="article_card--title">
+							Посев семян под зиму
+						</h4>
+
+						<p class="article_card--text">Статья расскажет, как и какие работы проводить для посева семян в зимний сезон. Делимся с вами полезной и актуальной информацией в блоге msso.by.</p>
+
+						<a href="#" class="article_card--link">Подробнее <img src="./img/more.svg" alt=""></a>
+					</div>
+				</article>
+				<article class="article_card">
+					<img class="article_card--image" src="./img/article_img1.png" alt="">
+
+					<div class="article_card--info">
+						<h4 class="article_card--title">
+							Посев семян под зиму
+						</h4>
+
+						<p class="article_card--text">Статья расскажет, как и какие работы проводить для посева семян в зимний сезон. Делимся с вами полезной и актуальной информацией в блоге msso.by.</p>
+
+						<a href="#" class="article_card--link">Подробнее <img src="./img/more.svg" alt=""></a>
+					</div>
+				</article>
+				<article class="article_card">
+					<img class="article_card--image" src="./img/article_img1.png" alt="">
+
+					<div class="article_card--info">
+						<h4 class="article_card--title">
+							Посев семян под зиму
+						</h4>
+
+						<p class="article_card--text">Статья расскажет, как и какие работы проводить для посева семян в зимний сезон. Делимся с вами полезной и актуальной информацией в блоге msso.by.</p>
+
+						<a href="#" class="article_card--link">Подробнее <img src="./img/more.svg" alt=""></a>
+					</div>
+				</article>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="article_big">
+				<h2 class="article_big--title">
+					Почему покупать семена нужно у нас?
+				</h2>
+
+				<p class="article_big--text">
+					В нашем интернет-магазине представлены семена от ведущих отечественных и иностранных поставщиков. Все они подходят для выращивания как на полях в крупных хозяйствах, так и на небольших огородах или в садах. Мы предлагаем купить семена, которые характеризуются отличной приживаемостью и высокой урожайностью [...]
+					<a href="#">Подробнее <img src="./img/more.svg" alt=""></a>
+				</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="about" id="about">
+		<div class="container">
+			<h2 class="title">
+				О продукции наглядно
+			</h2>
+			<h3 class="subtitle">
+				Компания-изготовитель семян в Беларуси "МинскСортСемОвощ" рассказывает о своей продукции, информирует о новиках семян. Специалисты показывают как высевать семена на рассаду, пересаживать рассаду в грунт и ухаживать за растениями, чтобы получить богатый урожай или красивый сад!
+			</h3>
+
+			<div class="about_inner">
+				<div class="about_video">
+					<iframe src="https://www.youtube.com/embed/EngW7tLk6R8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="about_video">
+					<iframe src="https://www.youtube.com/embed/EngW7tLk6R8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<div class="about_video">
+					<iframe src="https://www.youtube.com/embed/EngW7tLk6R8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+
+			<div class="about_social">
+				<a href="#">
+					<img src="./img/tiktok.svg" alt="">
+				</a>
+				<a href="#">
+					<img src="./img/yputube.svg" alt="">
+				</a>
+				<a href="#">
+					<img src="./img/insta.svg" alt="">
+				</a>
 			</div>
 		</div>
 	</section>
