Add partners slider and footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -456,6 +456,174 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="partners" id="partners">
+		<div class="container">
+			<h2>Наши партнеры</h2>
+			<div class="partners__inner">
+				<div class="partners_swiper--inner">
+					<div class="partners_swiper swiper">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="./img/logo1.png" alt="">
+							</div>
+							<div class="swiper-slide">
+								<img src="./img/logo2.png" alt="">
+							</div>
+							<div class="swiper-slide">
+								<img src="./img/logo3.png" alt="">
+							</div>
+							<div class="swiper-slide">
+								<img src="./img/logo4.png" alt="">
+							</div>
+							<div class="swiper-slide">
+								<img src="./img/logo5.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="swiper-button-prev swiper-button-prev__partners"></div>
+				<div class="swiper-button-next swiper-button-next__partners"></div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer" id="footer">
+		<div class="container">
+			<div class="footer_top">
+				<div class="footer_block">
+					<ul class="footer_links">
+						<li class="footer_links--item">
+							Интернет-магазин
+							<a href="tel:8 (029) 607-13-24">8 (029) 607-13-24</a>
+						</li>
+						<li class="footer_links--item">
+							Отдел розницы
+							<a href="tel:8 (044) 576-73-56">8 (044) 576-73-56</a>
+						</li>
+						<li class="footer_links--item">
+							Отдел опта
+							<a href="tel:8 (029) 607-13-24">8 (017) 514-03-14</a>
+						</li>
+					</ul>
+
+					<div class="footer_social">
+						<a href="#">
+							<img src="./img/footer-tiktok.svg" alt="">
+						</a>
+						<a href="#">
+							<img src="./img/footer-insta.svg" alt="">
+						</a>
+						<a href="#">
+							<img src="./img/footer-youtube.svg" alt="">
+						</a>
+					</div>
+				</div>
+
+				<div class="footer_block">
+					<span class="footer_title">
+						Компания
+					</span>
+					<ul class="footer_menu">
+						<li>
+							<a href="#">
+								О нас
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Контакты
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Магазины
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Оптовым клиентам
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Акционерам
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Вакансии
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Закупки
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer_block">
+					<span class="footer_title footer_title--menu">
+						Информация
+					</span>
+
+					<ul class="footer_menu">
+						<li>
+							<a href="#">
+								Доставка и оплата
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Акции
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Импортозамещение
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Новости
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								Защита персональных данных
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer_block">
+					<span class="footer_title">
+						Контакты
+					</span>
+
+					<p>
+						ОАО «МинскСортСемОвощ», 220014, Республика Беларусь,
+						г. Минск, ул. Минина, д.21, корп. 1
+						8 (017) 374-25-87, факс (017) 373-25-96
+
+						Email: info@msso.by
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="footer_bottom">
+			<div class="container">
+				<p>
+					Copyright © 2013-2022 ОАО «МинскСортСемОвощ». Все права защищены.
+					Интернет-магазин зарегистрирован в Торговом Реестре Республики Беларусь №508695 от 28.04.2021.
+					Свидетельство о госрегистрации № 600052664 от 28.01.2000 выдано Миноблисполкомом.
+				</p>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="./js/main.js"></script>
